--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
                 <h2>Monolith</h2>
             </div>
             <div class="list">
-                <a href="#Home">Home</a>
+                <a href="index.html">Home</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="NewArrivals.html">New Arrivals</a>
                 <a href="Testimonials.html">Testimonials</a>
